--- a/app/src/main/res/layout/activity_add_tracking.xml
+++ b/app/src/main/res/layout/activity_add_tracking.xml
@@ -9,41 +9,52 @@
         android:layout_height="wrap_content">
         <include layout="@layout/activity_toolbar"/>
     </android.support.design.widget.AppBarLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_margin="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/pb_add_tracking"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
-            android:text="Masukkan Nomor resi yang hendak Anda lacak"/>
-        <android.support.design.widget.TextInputLayout
-            android:layout_marginTop="8dp"
+            android:layout_centerInParent="true"/>
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_add_tracking_id"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:inputType="text"
-                android:hint="Nomor resi" />
-        </android.support.design.widget.TextInputLayout>
-        <Button
-            android:id="@+id/btn_add_tracking_submit"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/colorWhite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="Submit"/>
-    </LinearLayout>
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:text="Masukkan Nomor resi yang hendak Anda lacak"/>
+            <android.support.design.widget.TextInputLayout
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/et_add_tracking_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:inputType="text"
+                    android:hint="Nomor resi" />
+            </android.support.design.widget.TextInputLayout>
+            <Button
+                android:id="@+id/btn_add_tracking_submit"
+                android:layout_marginTop="16dp"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:text="Submit"/>
+        </LinearLayout>
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
