--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -65,11 +65,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_profile_email"
                     android:textSize="14sp"
                     android:fontFamily="sans-serif"
-                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="ibnumuzzaakkir@gmail.com"/>
                 <TextView
+                    android:id="@+id/tv_profile_phone"
                     android:layout_marginTop="8dp"
                     android:textSize="14sp"
                     android:fontFamily="sans-serif"
