--- a/app/src/main/res/layout/item_package.xml
+++ b/app/src/main/res/layout/item_package.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv_package_expedition_name"
                 android:textAllCaps="true"
                 android:textSize="14sp"
                 android:fontFamily="sans-serif"
@@ -38,12 +39,14 @@
                 android:layout_height="wrap_content"
                 android:text="JNE Indonesia"/>
             <TextView
+                android:id="@+id/tv_package_track_id"
                 android:layout_marginTop="8dp"
                 android:textSize="12sp"
                 android:fontFamily="sans-serif"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:text="Track ID : 999-99-999-99"/>
             <TextView
+                android:id="@+id/tv_package_resi_no"
                 android:layout_marginTop="4dp"
                 android:textSize="12sp"
                 android:fontFamily="sans-serif"
@@ -51,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="No Resi : 1234-1234-123"/>
             <TextView
+                android:id="@+id/tv_package_status"
                 android:layout_marginTop="4dp"
                 android:textSize="12sp"
                 android:fontFamily="sans-serif"
