Add load image for package list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorWhiteGrey">#FFEEEEEE</color>
     <color name="colorDarkGrey">#707070</color>
     <color name="colorBlack">#000</color>
+    <color name="colorDarkOrange">#F98424</color>
 </resources>
