--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -4,24 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:padding="16dp">
+    android:padding="8dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ImageButton
+            android:padding="8dp"
+            android:id="@+id/imgbtn_back"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:src="@drawable/ic_arrow_back_24dp"/>
         <ImageView
+            android:id="@+id/header_logo"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_logo_topbar"/>
         <ImageButton
+            android:visibility="gone"
+            android:padding="8dp"
             android:id="@+id/imgbtn_add_package"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:src="@drawable/ic_add"/>
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
