--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -82,6 +82,7 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <Button
+        android:id="@+id/btn_sign_out"
         android:layout_marginTop="16dp"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
