--- a/app/src/main/res/layout/item_package.xml
+++ b/app/src/main/res/layout/item_package.xml
@@ -63,9 +63,10 @@
                 android:text="On the way with courrier"/>
             </LinearLayout>
             <View
+                android:id="@+id/view_package_color"
                 android:layout_weight="0.1"
                 android:layout_gravity="right"
-                android:layout_width="6dp"
+                android:layout_width="8dp"
                 android:background="@color/colorPrimary"
                 android:layout_height="match_parent"/>
     </LinearLayout>
