--- a/app/src/main/res/layout/activity_detail_package.xml
+++ b/app/src/main/res/layout/activity_detail_package.xml
@@ -23,6 +23,11 @@
             class="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+        <ProgressBar
+            android:id="@+id/pb_detail_package"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <android.support.v7.widget.CardView
             android:background="@color/colorWhite"
             android:layout_alignParentBottom="true"
@@ -40,6 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/tv_company_name"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:textAllCaps="true"
@@ -50,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:text="JNE Indonesia"/>
                     <TextView
+                        android:id="@+id/tv_detail_track_id"
                         android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
                         android:layout_marginTop="8dp"
@@ -72,7 +79,7 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_gravity="center_vertical"
                         android:padding="8dp"
-                        android:id="@+id/iv_expedition_logo"
+                        android:id="@+id/iv_courier_photo"
                         android:src="@drawable/ic_logo_jne"
                         android:layout_width="80dp"
                         android:layout_height="80dp"/>
@@ -89,6 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/tv_courier_name"
                             android:textStyle="bold"
                             android:textSize="14sp"
                             android:fontFamily="sans-serif"
@@ -96,20 +104,6 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorBlack"
                             android:text="Bapak Driver"/>
-                        <TextView
-                            android:layout_marginTop="4dp"
-                            android:textSize="12sp"
-                            android:fontFamily="sans-serif"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="10 Mins to arrive"/>
-                        <TextView
-                            android:layout_marginTop="4dp"
-                            android:textSize="12sp"
-                            android:fontFamily="sans-serif"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Distance 5 km"/>
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
