--- a/app/src/main/res/layout/activity_add_tracking.xml
+++ b/app/src/main/res/layout/activity_add_tracking.xml
@@ -32,7 +32,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorBlack"
-                android:text="Masukkan Nomor resi yang hendak Anda lacak"/>
+                android:text="Masukkan Nomor resi yang ingin kamu lacak"/>
             <android.support.design.widget.TextInputLayout
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
